--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -4,16 +4,16 @@ $color-secondary: #854D27;
 $color-white: #f1f2f6;
 $color-light: #ced6e0;
 $color-grey: #57606f;
-$color-dark: #231e1b;
-$color-black: #1e1a17;
+$color-dark: #1f1b18;
+$color-black: #1b1815;
 
 // Font families
-$font-accent: "Marcellus", "Georgia", serif;
-$font-normal: "Overpass", "Trebuchet MS", sans-serif;
+$font-accent: "Great Vibes", cursive;
+$font-normal: "Josefin Sans", "Trebuchet MS", sans-serif;
 
 // Defaults
 $default-line-height: 1.6;
 $default-font-size: 62.5%;
 
 // Text sizes
-$text-regular: 1.4rem;
+$text-regular: 1.5rem;
