About section completed

--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,8 +1,8 @@
 // Dark theme colors
 $color-primary: #FF751F;
-$color-secondary: #854D27;
+$color-secondary: #6b3d1e;
 $color-white: #f1f2f6;
-$color-light: #ced6e0;
+$color-light: #c9d1da;
 $color-grey: #57606f;
 $color-dark: #1f1b18;
 $color-black: #1b1815;
