--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -29,10 +29,14 @@
     }
 
     &__hero {
-        height: 70%;
+        height: 75%;
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: center;
+
+        &--title {
+            word-spacing: .5rem;
+        }
     }
 }
