Modified a small styling to the about section

--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -13,6 +13,10 @@
     color: $color-primary;
 }
 
+.color-secondary {
+    color: $color-secondary;
+}
+
 .color-light {
     color: $color-light;
 }
