Menu section completed

--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -11,6 +11,10 @@
         display: flex;
         gap: 2.5rem;
     }
+
+    &--lg {
+        padding: 1.5rem 3.75rem;
+    }
     
     &--primary {
         background: $color-primary;
