Reviews section completed

--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -3,7 +3,7 @@ $color-primary: #FF751F;
 $color-secondary: #6b3d1e;
 $color-white: #f1f2f6;
 $color-light: #c9d1da;
-$color-grey: #57606f;
+$color-grey: #747f93;
 $color-dark: #1f1b18;
 $color-black: #1b1815;
 
